# koharu

./: .gitignore  .oxfmtrc.json  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.ja.md  README.md  README.zh-CN.md  VULKAN_INTEGRATION.md  cliff.toml  drag-and-drop-import-v2.patch  flake.nix  info.txt  koharu-dev-and-skip-fixes.patch  model-selector-download-badges.patch  package-lock.json  package.json  playwright.config.ts  process all image even when one image fix.patch  test  zensical.toml
crates/koharu-ai/: Cargo.toml
crates/koharu-ai/src/: lib.rs  provider.rs
crates/koharu-app/: Cargo.toml  README.md
crates/koharu-app/src/: ai.rs  app.rs  archive.rs  autosave.rs  blobs.rs  bus.rs  config.rs  history.rs  jobs.rs  lib.rs  llm.rs  project.rs  projects.rs  protocol.rs  renderer.rs  session.rs  utils.rs
crates/koharu-bindgen/: Cargo.toml
crates/koharu-bindgen/src/: lib.rs  main.rs  rewrite.rs
crates/koharu-canvas/: Cargo.toml  README.md
crates/koharu-canvas/examples/: playground.rs  playground.wgsl
crates/koharu-canvas/src/: canvas.rs  damage.rs  elements.rs  error.rs  geometry.rs  gpu.rs  lib.rs  mask.rs  overlay.rs  overlay.wgsl  resources.rs  state.rs  transform.rs  visual_tests.rs
crates/koharu-config/: Cargo.toml
crates/koharu-config/src/: lib.rs
crates/koharu-desktop/: Cargo.toml  README.md
crates/koharu-desktop/examples/: smoke.rs
crates/koharu-desktop/src/: app.rs  gpu.rs  lib.rs  mask.rs  present.wgsl  protocol.rs
crates/koharu-diffusion/: Cargo.toml
crates/koharu-diffusion-sys/: Cargo.toml  build.rs  wrapper.h
crates/koharu-diffusion-sys/src/: lib.rs
crates/koharu-diffusion/examples/: text_to_image.rs
crates/koharu-diffusion/src/: callbacks.rs  context.rs  convert.rs  enums.rs  error.rs  ffi.rs  (+5 more)
crates/koharu-fonts/: Cargo.toml
cuda-rt/: Cargo.toml  build.rs
cuda-rt/src/: lib.rs  zip.rs
koharu/: Cargo.toml  README.md  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  tauri.windows.release.conf.json
koharu-api/: Cargo.toml
koharu-api/src/: commands.rs  events.rs  lib.rs  method.rs  parse.rs  views.rs
koharu-app/: Cargo.toml  tauri.conf.json
koharu-app/data/: google-fonts-catalog.json
koharu-app/src/: ai.rs  app.rs  archive.rs  autosave.rs  blob_store.rs  blobs.rs  bus.rs  command.rs  config.rs  edit.rs  engine.rs  google_fonts.rs  history.rs  io.rs  lib.rs  llm.rs  main.rs  manifest.rs  ml.rs  operations.rs  page_cache.rs  pipeline.rs  projects.rs  renderer.rs  session.rs  state_tx.rs  storage.rs  telemetry.rs  terminology.rs  translation_xml.rs  utils.rs
koharu-core/: Cargo.toml  README.md
koharu-core/src/: blob.rs  commands.rs  download.rs  effect.rs  events.rs  font.rs  glossary.rs  google_fonts.rs  hf_hub.rs  http.rs  lib.rs  op.rs  progress.rs  project.rs  protocol.rs  result.rs  scene.rs  state.rs  style.rs  zip.rs
koharu-downloader/: Cargo.toml  tauri.conf.json
koharu-downloader/capabilities/: default.json
koharu-downloader/src/: config.rs  download_progress.rs  inventory.rs  lib.rs  main.rs  state.rs
koharu-http/: Cargo.toml  README.md
koharu-http/src/: config.rs  download.rs  hf_hub.rs  http.rs  lib.rs  lock.rs  paths.rs  range.rs
koharu-llm/: Cargo.toml  build.rs
koharu-llm/src/: api.rs  facade.rs  jinja.rs  language.rs  lib.rs  model.rs  paddleocr_vl.rs  prompt.rs
koharu-llm/tests/: llm.rs
koharu-macros/: Cargo.toml
koharu-macros/src/: endpoint.rs  lib.rs
koharu-mcp/: Cargo.toml
koharu-mcp/src/: helpers.rs  lib.rs  params.rs  types.rs
koharu-ml/: CHANGELOG.md  Cargo.toml  README.md  build.rs
koharu-ml/src/: bbox.rs  facade.rs  hf_hub.rs  inpainting.rs  lib.rs  llm.rs  loading.rs  ops.rs  probability_map.rs  slicing.rs
koharu-ml/tests/: README.md  comic_text_detector.rs  font_detect.rs  inpaint.rs  llm.rs  manga_text_segmentation_2025.rs  ocr.rs  pp_doclayout_v3.rs  support.rs
koharu-models/: Cargo.toml  README.md
koharu-models/src/: comic_text_detector.rs  dbnet.rs  lama.rs  lama_candle.rs  lib.rs  llm.rs  manga_ocr.rs  manga_ocr_candle.rs  unet.rs  yolo_v5.rs
koharu-models/tests/: lama_candle_integration.rs  manga_ocr.rs  unet_dbnet.rs  yolo_v5.rs
koharu-pipeline/: Cargo.toml
koharu-pipeline/src/: lib.rs  operations.rs  pipeline.rs  state_tx.rs
koharu-psd/: Cargo.toml
koharu-psd/examples/: from_image.rs  full_fixture.rs
koharu-psd/src/: descriptor.rs  engine_data.rs  export.rs  input.rs  lib.rs  packbits.rs  writer.rs
koharu-psd/tests/: export.rs
koharu-renderer/: Cargo.toml  README.md
koharu-renderer/benches/: rendering.rs
koharu-renderer/src/: facade.rs  font.rs  google_fonts.rs  layout.rs  lib.rs  render.rs  renderer.rs  segment.rs  shape.rs  types.rs
koharu-renderer/tests/: render_cjk.rs  rendering.rs
koharu-rpc/: Cargo.toml
koharu-rpc/src/: api.rs  binary.rs  error.rs  events.rs  lib.rs  psd_export.rs  rpc.rs  server.rs  shared.rs  tracker.rs
koharu-rpc/tests/: openapi.rs
koharu-runtime/: Cargo.toml  README.md
koharu-runtime/src/: archive.rs  artifacts.rs  cuda.rs  download.rs  downloads.rs  dylib.rs  hf_hub.rs  http.rs  install.rs  layout.rs  lib.rs  llama.rs  loader.rs  packages.rs  progress.rs  pypi.rs  range.rs  registry.rs  runtime.rs  secrets.rs  settings.rs  zip.rs  zluda.rs
koharu-types/: Cargo.toml
koharu-types/src/: commands.rs  effect.rs  events.rs  font.rs  image.rs  lib.rs  method.rs  protocol.rs  views.rs
koharu/capabilities/: default.json
koharu/icons/: icon.icns
koharu/src/: api.rs  api_crs.rs  app.rs  assets.rs  callback.rs  chinese.rs  command.rs  dylib.rs  endpoints.rs  image.rs  inference.rs  khr.rs  lib.rs  llm.rs  main.rs  ml.rs  nvidia.rs  onnx.rs  operations.rs  pipeline.rs  progress.rs  renderer.rs  result.rs  rpc.rs  scraper.rs  sentry.rs  server.rs  state.rs  storage.rs  tracing_fmt.rs  ui.rs  update.rs  version.rs  window.rs  windows.rs
koharu/ui/: canvas.slint  logic.slint  main.slint  menubar.slint  panel.slint  progress.slint  state.slint
lama/: Cargo.toml
lama/src/: lib.rs  main.rs
llm/: Cargo.toml
llm/src/: lib.rs  main.rs
(+1706 files in other folders)
