[workspace]
members = [
    "koharu",
    "koharu-core",
    "koharu-ml",
    "koharu-runtime",
    "koharu-renderer",
]
default-members = ["koharu"]
resolver = "3"

[workspace.package]
version = "0.14.2"
edition = "2024"
description = "Manga translation tools"
license = "Apache-2.0"
authors = ["Mayo Takanashi <mayo@linux.com>"]
readme = "README.md"
homepage = "https://koharu.rs"
repository = "https://github.com/mayocream/koharu"
keywords = ["manga", "ocr", "translation", "deep_learning", "computer_vision"]

[workspace.dependencies]
koharu-core = { version = "0.14.2", path = "koharu-core", default-features = false }
koharu-runtime = { version = "0.14.2", path = "koharu-runtime", default-features = false }
koharu-ml = { version = "0.14.2", path = "koharu-ml", default-features = false }
koharu-renderer = { version = "0.14.2", path = "koharu-renderer", default-features = false }

candle-transformers = "=0.9.2-alpha.1"
candle-core = "=0.9.2-alpha.1"
candle-nn = "=0.9.2-alpha.1"
hf-hub = "0.4"
image = "0.25"
anyhow = "1.0"
imageproc = "0.25"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
open = "5.3"
rfd = "0.16"
postcard = { version = "1.0", features = ["use-std"] }
velopack = { version = "0.0", features = ["async"] }
thiserror = "2.0"
tauri = "2.9"
tauri-build = "2.5"
blake3 = "1.8"
rayon = "1.11"
# disables `esaxx_fast` feature which is conflicting with `ort`
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
strum = { version = "0.27", features = ["derive"] }
zip = { version = "6.0", default-features = false, features = ["deflate"] }
dirs = "6.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.8"
flate2 = { version = "1.0", default-features = false, features = [
    "zlib-ng-compat",
] }
csv = "1.3"
tempfile = "3.10"
once_cell = "1.21"
libloading = "0.9"
num_cpus = "1.17"
swash = "0.2"
fontdb = "0.23"
unicode-script = "0.5"
rustfft = "6.4"
cudarc = { version = "0.18", features = [
    "cuda-version-from-build-system",
    "cufft",
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
] }
objc2 = "0.6"
objc2-metal-performance-shaders = "0.3"
objc2-metal-performance-shaders-graph = "0.3"
objc2-foundation = "0.3"
sys-locale = "0.3"
indicatif = "0.17"

[patch.crates-io]
candle-transformers = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
candle-core = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
candle-nn = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
float8 = { git = "https://github.com/mayocream/float8", branch = "cuda-dynamic-loading" }
ug = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
ug-cuda = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
cudarc = { git = "https://github.com/mayocream/cudarc", branch = "feat/cufft" }
