[workspace]
members = [
    "koharu",
    "koharu-core",
    "koharu-macros",
    "koharu-ml",
    "koharu-runtime",
    "koharu-renderer",
]
default-members = ["koharu"]
resolver = "3"

[workspace.package]
version = "0.27.1"
edition = "2024"
description = "Manga translation tools"
license = "Apache-2.0"
authors = [
    "Mayo Takanashi <mayo@linux.com>",
    "Wangchong Zhou <fffonion@gmail.com>",
]
readme = "README.md"
homepage = "https://koharu.rs"
repository = "https://github.com/mayocream/koharu"
keywords = ["manga", "ocr", "translation", "deep_learning", "computer_vision"]
publish = false

[workspace.dependencies]
koharu-core = { path = "koharu-core", default-features = false }
koharu-runtime = { path = "koharu-runtime", default-features = false }
koharu-ml = { path = "koharu-ml", default-features = false }
koharu-renderer = { path = "koharu-renderer", default-features = false }
koharu-macros = { path = "koharu-macros" }

candle-transformers = "=0.9.2"
candle-core = "=0.9.2"
candle-nn = "=0.9.2"
hf-hub = "0.4"
image = "0.25"
anyhow = "1.0"
imageproc = "0.25"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
open = "5.3"
rfd = "0.16"
postcard = { version = "1.0", features = ["use-std"] }
velopack = { version = "0.0", features = ["async"] }
thiserror = "2.0"
wry = "0.48"
tao = "0.31"
blake3 = "1.8"
rayon = "1.11"
# disables `esaxx_fast` feature which is conflicting with `ort`
tokenizers = { version = "0.22", default-features = false, features = ["onig"] }
strum = { version = "0.27", features = ["derive"] }
zip = { version = "7.0", default-features = false, features = ["deflate"] }
dirs = "6.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["stream", "json", "blocking"] }
reqwest-middleware = "0.4"
reqwest-retry = "0.8"
flate2 = { version = "1.0", default-features = false, features = [
    "zlib-ng-compat",
] }
csv = "1.3"
tempfile = "3.24"
once_cell = "1.21"
libloading = "0.9"
num_cpus = "1.17"
rustfft = "6.4"
cudarc = { version = "0.19.0", features = [
    "cuda-version-from-build-system",
    "cufft",
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "driver",
    "nvrtc",
    "f16",
    "f8",
] }
objc2 = "0.6"
objc2-metal = "0.3"
objc2-metal-performance-shaders = "0.3"
objc2-metal-performance-shaders-graph = "0.3"
objc2-foundation = "0.3"
sys-locale = "0.3"
indicatif = "0.17"
minijinja = "2.0"
windows = { version = "0.62", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
windows-sys = "0.61"
winreg = "0.55"
skrifa = "0.40"
harfrust = "0.5"
icu = "2.1"
fontique = "0.7"
fontdue = "0.9"
wgpu = "28.0"
etagere = "0.2"
bytemuck = { version = "1.21", features = ["derive"] }
axum = { version = "0.8", features = ["json", "multipart"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = { version = "8.11", features = [
    "interpolate-folder-path",
    "debug-embed",
    "mime-guess",
] }
criterion = { version = "0.8", features = ["html_reports"] }
git-version = "0.3"
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing", "extra-traits"] }

[patch.crates-io]
candle-transformers = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
candle-core = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
candle-nn = { git = "https://github.com/mayocream/candle", branch = "cuda-dynamic-loading" }
float8 = { git = "https://github.com/mayocream/float8", branch = "cuda-dynamic-loading" }
ug = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }
ug-cuda = { git = "https://github.com/mayocream/ug", branch = "cuda-dynamic-loading" }

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
