[workspace]
members = [
    "crates/*",
]
default-members = ["crates/koharu"]
resolver = "3"

[workspace.package]
version = "0.62.0-alpha.1"
edition = "2024"
description = "Manga translation tools"
license = "GPL-3.0-only"
authors = [
    "Mayo Takanashi <mayo@linux.com>",
    "Wangchong Zhou <fffonion@gmail.com>",
]
readme = "README.md"
homepage = "https://koharu.rs"
repository = "https://github.com/mayocream/koharu"
keywords = ["manga", "ocr", "translation", "deep_learning", "computer_vision"]
publish = false

[workspace.dependencies]
koharu-bindgen = { path = "crates/koharu-bindgen", version = "0.62.0-alpha.1", default-features = false }
koharu-config = { path = "crates/koharu-config", version = "0.62.0-alpha.1", default-features = false }
koharu-scene = { path = "crates/koharu-scene", version = "0.62.0-alpha.1", default-features = false }
koharu-diffusion = { path = "crates/koharu-diffusion", version = "0.62.0-alpha.1", default-features = false }
koharu-diffusion-sys = { path = "crates/koharu-diffusion-sys", version = "0.62.0-alpha.1", default-features = false }
koharu-fonts = { path = "crates/koharu-fonts", version = "0.62.0-alpha.1", default-features = false }
koharu-llama = { path = "crates/koharu-llama", version = "0.62.0-alpha.1", default-features = false }
koharu-llama-sys = { path = "crates/koharu-llama-sys", version = "0.62.0-alpha.1", default-features = false }
koharu-runtime = { path = "crates/koharu-runtime", version = "0.62.0-alpha.1", default-features = false }
koharu-torch = { path = "crates/koharu-torch", version = "0.62.0-alpha.1", default-features = false }
koharu-torch-sys = { path = "crates/koharu-torch-sys", version = "0.62.0-alpha.1", default-features = false }
koharu-ai = { path = "crates/koharu-ai", version = "0.62.0-alpha.1", default-features = false }
koharu-app = { path = "crates/koharu-app", version = "0.62.0-alpha.1", default-features = false }
koharu-ml = { path = "crates/koharu-ml", version = "0.62.0-alpha.1", default-features = false }
koharu-pipeline = { path = "crates/koharu-pipeline", version = "0.62.0-alpha.1", default-features = false }
koharu-worker = { path = "crates/koharu-worker", version = "0.62.0-alpha.1", default-features = false }
koharu-translator = { path = "crates/koharu-translator", version = "0.62.0-alpha.1", default-features = false }
koharu-psd = { path = "crates/koharu-psd", version = "0.62.0-alpha.1", default-features = false }
koharu-renderer = { path = "crates/koharu-renderer", version = "0.62.0-alpha.1", default-features = false }
koharu-canvas = { path = "crates/koharu-canvas", version = "0.62.0-alpha.1", default-features = false }
koharu-desktop = { path = "crates/koharu-desktop", version = "0.62.0-alpha.1", default-features = false }
koharu-secrets = { path = "crates/koharu-secrets", version = "0.62.0-alpha.1", default-features = false }

# external dependencies
hf-hub = "0.5"
image = "0.25"
webp = { version = "0.3.1", default-features = false }
fast_image_resize = { version = "6.0", features = ["image", "rayon"] }
anyhow = "1.0"
async-trait = "0.1"
imageproc = "0.27"
ab_glyph = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1.0"
specta = { version = "=2.0.0-rc.25", features = ["derive", "url", "uuid"] }
specta-serde = "=0.0.12"
specta-typescript = "=0.0.12"
tokio = { version = "1.52", features = ["full"] }
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "registry"] }
console = "0.16"
open = "5.3"
rfd = "0.17"
rmp-serde = "1"
thiserror = "2.0"
blake3 = "1.8"
rayon = "1.12"
rust-embed = { version = "8.12", features = ["interpolate-folder-path"] }
# disables `esaxx_fast` feature which is conflicting with `ort`
tokenizers = { version = "0.23", default-features = false, features = ["onig"] }
strum = { version = "0.28", features = ["derive"] }
zip = { version = "8.6", default-features = false, features = ["deflate"] }
dirs = "6.0"
futures = "0.3"
eventsource-stream = "0.2.3"
encoding_rs = "0.8"
enumflags2 = "0.7.12"
reqwest = { version = "0.13", features = ["stream", "json", "form", "blocking", "multipart"] }
secrecy = { version = "0.10", features = ["serde"] }
reqwest-middleware = "0.5"
reqwest-retry = "0.9"
toml = "1.1"
inventory = "0.3"
url = { version = "2.5", features = ["serde"] }
arc-swap = "1.7"
camino = { version = "1.1", features = ["serde1"] }
indexmap = { version = "2.13", features = ["serde"] }
indextree = "4.8.1"
rusqlite = { version = "0.40.1", default-features = false, features = [
    "backup",
    "bundled",
    "cache",
] }
revision = { version = "0.30.0", features = ["uuid"] }
flate2 = { version = "1.0", default-features = false, features = [
    "zlib-ng-compat",
] }
csv = "1.3"
tempfile = "3.24"
once_cell = "1.21"
libloading = "0.8.9"
num_cpus = "1.17"
cudarc = { version = "0.19.8", default-features = false, features = [
    "cuda-version-from-build-system",
    "fallback-latest",
    "runtime",
    "cufft",
    "std",
    "cublas",
    "cublaslt",
    "curand",
    "cudnn",
    "driver",
    "dynamic-loading",
    "nvrtc",
    "f16",
    "f8",
] }
indicatif = "0.18"
minijinja = "2.19"
minijinja-contrib = { version = "2.19", features = ["pycompat"] }
windows = { version = "0.62", features = [
    "Win32",
    "Win32_System",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
windows-sys = { version = "0.61", features = ["Win32_System_LibraryLoader"] }
winreg = "0.56"
skrifa = "0.42"
harfrust = "0.10"
hypher = "0.1.7"
icu_properties = "2.2"
icu_segmenter = "2.2"
jieba-rs = "0.10"
fontique = "0.11"
pollster = "0.4"
vello = "0.9"
wgpu = { version = "29.0", features = ["wgsl"] }
winit = "0.30.12"
wry = { version = "0.55.1", features = ["transparent"] }
schemars = { version = "1.2", features = ["chrono04", "indexmap2", "uuid1"] }
uuid = { version = "1.18", features = ["v4", "v7", "serde"] }
atomicwrites = "0.4"
fs4 = "1"
parking_lot = "0.12"
walkdir = "2.5"
proptest = "1.6"
base64 = "0.22"
unicode-bidi = "0.3"
criterion = { version = "0.8", features = ["html_reports"] }
git-version = "0.3"
keyring = { version = "4.1", features = ["linux-keyutils-keyring-store"] }
keyring-core = "1.0"
linux-keyutils-keyring-store = "1.0"
lru = "0.18"
llguidance = "1.7.5"
petname = "3"
sentry = { version = "0.48", features = ["tracing"] }
fast-glob = "1.0"
tar = "0.4"
toktrie = "1.7.5"
bytes = "1.12"
cmake = "0.1"
bindgen = "0.72"
prettyplease = "0.2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
bytemuck = "1.25"
half = { version = "2.7", features = ["bytemuck"] }
libc = "0.2"
memmap2 = "0.9"
safetensors = "0.8"

[profile.dev.package.image]
opt-level = 3

[profile.dev.package.imageproc]
opt-level = 3

[profile.release-with-debug]
inherits = "release"
debug-assertions = true
