[package]
name = "cuda-rt"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
ureq = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
dirs = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
blake3 = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
csv = { workspace = true }
