[package]
name = "cuda-rt"
version.workspace = true
edition.workspace = true
description.workspace = true
license-file.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
flate2 = { workspace = true }
csv = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
once_cell = { workspace = true }
libloading = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["cuda"]
cuda = []
onnxruntime = []
