[package]
name = "koharu-api"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
koharu-types = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
