[package]
name = "koharu-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
hf-hub = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
strum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
flate2 = { workspace = true }
csv = { workspace = true }
