[package]
name = "koharu-core"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
schemars = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
postcard = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
