[package]
name = "koharu-llm"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[lib]
doctest = false

[[bin]]
name = "llama"
path = "bin/llama.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
dirs = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
libloading = "0.8.9"
once_cell = { workspace = true }
reqwest = { workspace = true }
tar = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-core = "0.1"
zip = { workspace = true }
encoding_rs = "0.8"
enumflags2 = "0.7.12"

[build-dependencies]
anyhow = { workspace = true }
bindgen = "0.72.1"
flate2 = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { workspace = true }
syn = { version = "2.0", features = ["full"] }
tar = "0.4"

[dev-dependencies]
tempfile = { workspace = true }

[features]
default = ["cuda", "mtmd"]
cuda = []
vulkan = []
mtmd = []
