[package]
name = "koharu-llm"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[lib]
doctest = false

[[bin]]
name = "llama"
path = "bin/llama.rs"

[[bin]]
name = "llm"
path = "bin/llm.rs"

[[bin]]
name = "paddleocr-vl-llm"
path = "bin/paddleocr-vl.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
flate2 = { workspace = true }
futures = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
koharu-runtime = { workspace = true }
libloading = { workspace = true }
minijinja = { workspace = true }
minijinja-contrib = { workspace = true }
num_cpus = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
url = { workspace = true }
tar = "0.4"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-core = "0.1"
zip = { workspace = true }
encoding_rs = "0.8"
enumflags2 = "0.7.12"

[build-dependencies]
anyhow = { workspace = true }
bindgen = "0.72.1"
flate2 = { workspace = true }
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { workspace = true }
syn = { version = "2.0", features = ["full"] }
tar = "0.4"
