[package]
name = "koharu-mcp"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
publish.workspace = true

[dependencies]
koharu-pipeline = { workspace = true }
koharu-types = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
base64 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
