[package]
name = "koharu-ml"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
hf-hub = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rustfft = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
libloading = { workspace = true }
minijinja = { workspace = true }
sys-locale = { workspace = true }
cudarc = { workspace = true, optional = true }
objc2 = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-metal-performance-shaders = { workspace = true, optional = true }
objc2-metal-performance-shaders-graph = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }

[features]
cuda = [
    "candle-core/cuda",
    "candle-nn/cuda",
    "candle-transformers/cuda",
    "cudarc",
]
cudnn = ["candle-core/cudnn", "candle-nn/cudnn", "candle-transformers/cudnn"]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "objc2",
    "objc2-metal",
    "objc2-foundation",
    "objc2-metal-performance-shaders",
    "objc2-metal-performance-shaders-graph",
]

[[bin]]
name = "comic-text-detector"
path = "bin/comic-text-detector.rs"

[[bin]]
name = "lama"
path = "bin/lama.rs"

[[bin]]
name = "llm"
path = "bin/llm.rs"

[[bin]]
name = "manga-ocr"
path = "bin/manga-ocr.rs"

[[bin]]
name = "font-detect"
path = "bin/font-detect.rs"
