[package]
name = "koharu-ml"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-runtime = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
candle-nn = { workspace = true }
candle-flash-attn = { workspace = true, optional = true }
tokenizers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
rustfft = { workspace = true }
futures = { workspace = true }
num_cpus = { workspace = true }
rayon = { workspace = true }
libloading = { workspace = true }
minijinja = { workspace = true }
cudarc = { workspace = true, optional = true }
objc2 = { workspace = true, optional = true }
objc2-metal = { workspace = true, optional = true }
objc2-metal-performance-shaders = { workspace = true, optional = true }
objc2-metal-performance-shaders-graph = { workspace = true, optional = true }
objc2-foundation = { workspace = true, optional = true }

[features]
cuda = [
    "candle-core/cuda",
    "candle-core/cudnn",
    "candle-nn/cuda",
    "candle-nn/cudnn",
    "candle-transformers/cuda",
    "candle-transformers/cudnn",
    "cudarc",
    "candle-flash-attn",
    "candle-flash-attn/cudnn",
]
metal = [
    "candle-core/metal",
    "candle-nn/metal",
    "candle-transformers/metal",
    "objc2",
    "objc2-metal",
    "objc2-foundation",
    "objc2-metal-performance-shaders",
    "objc2-metal-performance-shaders-graph",
]

[dev-dependencies]
dirs = { workspace = true }

[[bin]]
name = "comic-text-detector"
path = "bin/comic-text-detector.rs"

[[bin]]
name = "comic-text-bubble-detector"
path = "bin/comic-text-bubble-detector.rs"

[[bin]]
name = "lama"
path = "bin/lama.rs"

[[bin]]
name = "manga-ocr"
path = "bin/manga-ocr.rs"

[[bin]]
name = "paddleocr-vl"
path = "bin/paddleocr-vl.rs"

[[bin]]
name = "mit48px-ocr"
path = "bin/mit48px-ocr.rs"

[[bin]]
name = "font-detect"
path = "bin/font-detect.rs"

[[bin]]
name = "pp-doclayout-v3"
path = "bin/pp-doclayout-v3.rs"

[[bin]]
name = "manga-text-segmentation-2025"
path = "bin/manga-text-segmentation-2025.rs"

[[bin]]
name = "speech-bubble-segmentation"
path = "bin/speech-bubble-segmentation.rs"

[[bin]]
name = "aot-inpainting"
path = "bin/aot-inpainting.rs"

[[bin]]
name = "flux2-klein"
path = "bin/flux2-klein.rs"

[[bin]]
name = "flux2-klein-prompt"
path = "bin/flux2-klein-prompt.rs"
