[package]
name = "koharu-models"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
hf-hub = { workspace = true }
candle-core = { workspace = true }
candle-transformers = { workspace = true }
koharu-core = { workspace = true }
candle-nn = { workspace = true }
tokenizers = { workspace = true }
strum = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[features]
cuda = ["ort/cuda", "candle-core/cuda", "candle-transformers/cuda"]
metal = ["candle-core/metal", "candle-transformers/metal"]
coreml = ["ort/coreml"]

[[bin]]
name = "comic-text-detector"
path = "bin/comic-text-detector.rs"

[[bin]]
name = "lama"
path = "bin/lama.rs"

[[bin]]
name = "llm"
path = "bin/llm.rs"

[[bin]]
name = "manga-ocr"
path = "bin/manga-ocr.rs"
