[package]
name = "koharu-pipeline"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-types = { workspace = true }
koharu-ml = { workspace = true }
koharu-renderer = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
once_cell = { workspace = true }
open = { workspace = true }
natord = { workspace = true }
rayon = { workspace = true }
rfd = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
keyring = { workspace = true }
webp = { workspace = true }

[target.'cfg(windows)'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(target_os = "linux")'.dependencies]
keyring = { workspace = true, features = ["sync-secret-service"] }
