[package]
name = "koharu-psd"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
authors.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
koharu-core = { workspace = true }
image = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
koharu-app = { workspace = true }
psd = "0.3.5"
